src/test/ui/error-codes/E0261.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/E0261.rs:1:12
   |
LL | fn foo(x: &'a str) { }
   |       -    ^^ undeclared lifetime
   |       |
   |       help: consider introducing lifetime `'a` here: `<'a>`
   |
   = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/E0261.rs:5:9
   |
LL | struct Foo {
   |           - help: consider introducing lifetime `'a` here: `<'a>`
LL |     x: &'a str,
   |         ^^ undeclared lifetime
   |
   = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
